# davinci_still_tool

./: .gitignore  README.md  TODO.md  pyproject.toml  test.ipynb
Resolve_README/: td_MultiMarkerToClipEdit.lua
davinci_still_tool/: marker_counter.py  still_grab.py  timeline_creator.py
davinci_still_tool/_gsdata_/: _file_state_v4._gs  _insync_v4.gsl
src/: marker_counter.py  timeline_creator.py  type.py
