[tool.poetry]
name = "davinci-still-tool"
version = "0.1.0"
description = ""
authors = ["thomjiji <hxy449999@gmail.com>"]
readme = "README.md"
packages = [{include = "davinci_still"}]

[tool.poetry.dependencies]
python = "^3.10"
dftt-timecode = "^0.0.11"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
