[tool.poetry]
name = "near-set-tools"
version = "0.0.1"
description = ""
authors = ["thomjiji <hxy449999@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "near_set_tools"}]

[tool.poetry.dependencies]
python = "^3.11"
dftt-timecode = "^0.0.12"
dri = {path = "/Users/thom/code/dri"}


[tool.poetry.group.dev.dependencies]
black = {extras = ["d"], version = "^23.3.0"}
jupyter = "^1.0.0"
notebook = "^6.5.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
